src/objects/Payment_Terms__c.object
<CustomObject>
    <fields>
        <fullName>Expected_collection_date__c</fullName>
        <formula>Invoice_Date__c + 
VALUE ( SUBSTITUTE ( TEXT ( Payment_Terms__c ), &quot;Net &quot;, &quot;&quot;) )</formula>
        <label>Expected collection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_terms__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payment_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Number__c</fullName>
        <label>Payment Amount (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <description>Please enter notes on approvals and terms here.</description>
        <inlineHelpText>Please enter notes on approvals and terms here.</inlineHelpText>
        <label>Payment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Year__c</fullName>
        <label>Payment Year</label>
        <picklist>
            <picklistValues>
                <fullName>Year 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Payment Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>